correct overflow y

--- a/src/css/styles/news.css
+++ b/src/css/styles/news.css
@@ -14,6 +14,7 @@
     margin: 3vh auto;
     background-color: #000000;
     overflow-x: hidden;
+    overflow-y: auto;
     color: #FFFFFF;
     font-family: 'Abel', sans-serif;
   }
